# chtl-lost-builder

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  mongo.py  permissions.py  security.py  session.py  settings.py  utils.py
backend/app/enums/: user_role_enum.py
backend/app/models/: character_model.py  session_model.py  user_model.py
backend/app/repositories/: character_repo.py  session_repo.py  user_repo.py
backend/app/routers/: admin_router.py  auth_router.py  character_router.py  health_router.py  user_router.py
backend/app/schemas/: admin_schema.py  auth_schema.py  character_schema.py  user.py  user_schema.py
backend/app/security/: hashing.py  passwords.py  permissions.py  session.py
backend/app/services/: admin_service.py  auth_service.py  character_service.py  user_service.py
backend/tests/: conftest.py  test_admin_router.py  test_auth_edgecases.py  test_auth_flow.py  test_auth_login.py  test_character_flow.py  test_config_and_mongo.py  test_heath.py
docs/: frontend_architecture.txt
frontend/: index.html  manifest.json  package-lock.json  package.json  readme.md
frontend/public/: service-worker.js
frontend/src/: main.tsx
frontend/src/app/: App.tsx  Providers.tsx  Router.tsx  api.ts  router.tsx  store.ts
frontend/src/components/: Fallback.tsx
frontend/src/layouts/: RootLayout.tsx
frontend/src/pages/: BuilderPage.tsx  CharacterSheetPage.tsx  DevPage.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  (+3 more)
(+108 files in other folders)
